--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material-nextjs": "^6.1.3",
     "@tanstack/react-query": "^5.59.8",
     "@tanstack/react-query-devtools": "^5.59.8",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-file-base64": "^1.0.3",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
